# Aircraft-6DOF-Simulation

./: .gitignore  CMakeLists.txt  README.md  Things_I_Learned.cpp  flat_earth_eom.cpp  flat_earth_eom.h  gitignore  main_program.cpp  matplotlibcpp.h  numerical_integration_methods.cpp  numerical_integration_methods.h  spheres.cpp  spheres.h  ussa1976.cpp  ussa1976.h  wasm_wrapper.cpp
docs/: index.html  simulation.wasm
docs/assets/: index-3to0GH_p.js
web/: index.html  package-lock.json  package.json  simulation.js  style.css  vite.config.js
web/src/: main.js
